# github-download

./: pyproject.toml  requirements.txt
ghd/: __main__.py  config.py  consts.py  core.py  parser.py  stream.py  test_core.py  test_parser.py
github_download/: __main__.py  config.py  core.py  mirrors.py  test_core.py
